@@ -69,6 +69,13 @@ sub mvp_aliases {
   return { user => 'username' };
 }
 
+=attr username
+
+This option supplies the user's PAUSE username.  If not supplied, it will be
+looked for in the user's PAUSE configuration.
+
+=cut
+
 has username => (
   is   => 'ro',
   isa  => 'Str',
@@ -79,6 +86,13 @@ has username => (
     return $self->_credential('username') || $self->pause_cfg->{user};
   },
 );
+
+=attr password
+
+This option supplies the user's PAUSE password.  If not supplied, it will be
+looked for in the user's PAUSE configuration.
+
+=cut
 
 has password => (
   is   => 'ro',
@@ -100,6 +114,14 @@ has pause_cfg_file => (
   },
 );
 
+=attr pause_cfg
+
+This is a hashref of defaults loaded from F<~/.pause> -- this attribute is
+subject to removal in future versions, as the config-loading behavior in
+CPAN::Uploader is improved.
+
+=cut
+
 has pause_cfg => (
   is      => 'ro',
   isa     => 'HashRef[Str]',
@@ -120,10 +142,31 @@ has pause_cfg => (
   },
 );
 
+=attr subdir
+
+If given, this specifies a subdirectory under the user's home directory to
+which to upload.  Using this option is not recommended.
+
+=cut
+
 has subdir => (
     is        => 'ro',
     isa       => 'Str',
     predicate => 'has_subdir',
+);
+
+=attr upload_uri
+
+If given, this specifies an alternate URI for the PAUSE upload form.  By
+default, the default supplied by L<CPAN::Uploader> is used.  Using this option
+is not recommended in most cases.
+
+=cut
+
+has upload_uri => (
+  is => 'ro',
+  isa => 'Str',
+  predicate => 'has_upload_uri',
 );
 
 has uploader => (
@@ -138,6 +181,8 @@ has uploader => (
       password => $self->password,
       ($self->has_subdir
            ? (subdir => $self->subdir) : ()),
+      ($self->has_upload_uri
+           ? (upload_uri => $self->upload_uri) : ()),
     });
 
     $uploader->{'Dist::Zilla'}{plugin} = $self;
