@@ -7,6 +7,8 @@ Revision history for {{$dist->name}}
 
           catch and simplify "no dist.ini" errors from MVP
 
+          UploadToCPAN now takes a "upload_uri" option
+
 4.200008  2011-06-23 11:53:56 America/New_York
           PodVersion no longer drops the file's last newline
 
